--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,35 @@ body {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     justify-items: center;
+    border-radius: 5px;
+    background-color: #9f2063;
 }
 
 #top-aside {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
+    border-radius: 5px;
+    background-color: #116395
 } 
+
+.grid-container {
+    display: grid;
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+    border-radius: 5px;
+    background-color: #26b67b;
+}
+
+#bottom-aside {
+    grid-column: 2 / 3;
+    grid-row: 5 / 6;
+    border-radius: 5px;
+    background-color: #25a4b5;
+}
+
+.foot {
+    grid-column: 2 / 3;
+    grid-row: 6 / 7;
+    border-radius: 5px;
+    background-color: #e06b26;
+}
