--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ body {
 
 .grid-container {
     display: grid;
+    grid-template-columns: 25px auto 25px;
+    grid-template-rows: ;
+    justify-items:center;
+    align-items: center;
     grid-column: 2 / 3;
     grid-row: 4 / 5;
     border-radius: 5px;
