--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,32 @@
 body {
     display: grid;
-    grid-template-columns: 25px auto 25px;
-    grid-template-rows: 25px 50px 50px auto 50px 50px 25px;
+    grid-template-columns: 25px 2fr 25px;
+    grid-template-rows: 25px 60px 60px auto 60px 60px 25px;
     gap: 10px;
 }
 
 .header {
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
+    grid-row: 2 / 2;
     justify-items: center;
     border-radius: 5px;
     background-color: #9f2063;
     justify-items: center;
     align-content: center;    
     color: white;
+    border-radius: 10px;
 }
 
 #top-aside {
     grid-column: 2 / 3;
-    grid-row: 3 / 4;
+    grid-row: 3 / 3;
     border-radius: 5px;
     background-color: #116395;
     justify-items: center;
     align-content: center;    
     color: white;
+    border-radius: 10px;
+
 } 
 
 .grid-container {
@@ -36,37 +39,39 @@ body {
         ". item2 ."
         ". item3 .";
    
-    row-gap: 10px ;
+    row-gap: 25px ;
     grid-column: 2 / 3;
     grid-row: 4 / 5;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: #26b67b;
 }
 
 #bottom-aside {
     grid-column: 2 / 3;
     grid-row: 5 / 6;
-    border-radius: 5px;
     background-color: #25a4b5;
     justify-items: center;
     align-content: center;    
     color: white;
+    border-radius: 10px;
+
 }
 
 .foot {
     grid-column: 2 / 3;
     grid-row: 6 / 7;
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: #e06b26;
     justify-items: center;
     align-content: center;    
     color: white;
+    grid-area: ;
 }
 
 
 .item1 {
     background-color: #e4195b;
-    border-radius: 5px;
+    border-radius: 10px;
     grid-area: item1;
     justify-items: center;
     align-content: center;    
@@ -76,7 +81,7 @@ body {
 
 .item2 {
     background-color: #e4195b;
-    border-radius: 5px;
+    border-radius: 10px;
     grid-area: item2;
     justify-items: center;
     align-content: center;    
@@ -86,7 +91,7 @@ body {
 
 .item3 {
     background-color: #e4195b;
-    border-radius: 5px;
+    border-radius: 10px;
     grid-area: item3;
     justify-items: center;
     align-content: center;    
@@ -94,8 +99,60 @@ body {
 }
 
 
-@media (min-width: 875px) {
+/* @media screen and (min-width: 1024px) {
     body {
-        
+        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-rows: 15% auto 15%;
+        grid-template-areas: 
+        "header header header"
+        "none none none"
+        "foot foot foot";
+        padding: 50px;
     }
-}
+
+    .main {
+        grid-column: 1 / 4;
+        grid-row: 2 / 3;
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-rows: none;
+    }
+
+    .header {
+        grid-row: 1 / 2;
+        grid-column: 1 / 6;
+        grid-area: header;
+        border-radius: 10px;
+    }
+
+    #top-aside {
+        grid-area: top-aside;
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+        border-radius: 10px;
+
+    }
+
+    .grid-container {
+        grid-area: grid-box;
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+        border-radius: 10px;
+
+    }
+    
+    #bottom-aside {
+        grid-area: bottom-aside;
+        grid-column: 3 / 4;
+        grid-row: 2 / 3;
+        border-radius: 10px;
+
+    }
+
+    .foot {
+        grid-area: foot;
+        grid-column: 1 / 4;
+        border-radius: 10px;
+
+    }
+} */
