--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,13 @@ body {
     background-color: #26b67b;
 }
 
+div h1 {
+    grid-column: 2;
+    grid-row: 3 / 4;
+   align-self: center;
+   justify-self: center;
+}
+
 #bottom-aside {
     grid-column: 2 / 3;
     grid-row: 5 / 6;
@@ -65,7 +72,6 @@ body {
     justify-items: center;
     align-content: center;    
     color: white;
-    grid-area: ;
 }
 
 
@@ -99,23 +105,15 @@ body {
 }
 
 
-/* @media screen and (min-width: 1024px) {
+@media (min-width: 1025px) {
     body {
         grid-template-columns: 1fr 2fr 1fr;
         grid-template-rows: 15% auto 15%;
         grid-template-areas: 
         "header header header"
-        "none none none"
+        "top-aside grid-box bottom-aside"
         "foot foot foot";
         padding: 50px;
-    }
-
-    .main {
-        grid-column: 1 / 4;
-        grid-row: 2 / 3;
-        display: grid;
-        grid-template-columns: 1fr 2fr 1fr;
-        grid-template-rows: none;
     }
 
     .header {
@@ -127,7 +125,7 @@ body {
 
     #top-aside {
         grid-area: top-aside;
-        grid-column: 2 / 3;
+        grid-column: 1 / 2;
         grid-row: 2 / 3;
         border-radius: 10px;
 
@@ -137,8 +135,17 @@ body {
         grid-area: grid-box;
         grid-column: 2 / 3;
         grid-row: 2 / 3;
+        grid-template-columns: 12.5px 1fr 1fr 1fr 12.5px;
         border-radius: 10px;
+        gap: 25px;
+        color: white;
+    }
 
+    div h1 {
+        grid-column: 3 / 4;
+        grid-row: 3 / 4;
+       align-self: center;
+       justify-self: center;
     }
     
     #bottom-aside {
@@ -155,4 +162,16 @@ body {
         border-radius: 10px;
 
     }
-} */
+
+
+    .item1 {
+        grid-column: 4 / 5;
+        grid-row: 4 / 5;
+    }
+
+
+    .item2 {
+        grid-column: 3 / 4;
+        grid-row: 4 / 5;
+    }
+}
